Update Post “2017-10-26-daft-punk”

--- a/content/blog/2017-10-26-daft-punk.md
+++ b/content/blog/2017-10-26-daft-punk.md
@@ -5,7 +5,7 @@ image: /images/Daftpunklapremiere2010.jpg
 tags:
   - Music
   - Electronic
-draft: false
+draft: true
 ---
 
 **Daft Punk** is a French [electronic music](https://en.m.wikipedia.org/wiki/Electronic_music) duo formed in Paris in 1993 by [Guy-Manuel de Homem-Christo](https://en.m.wikipedia.org/wiki/Guy-Manuel_de_Homem-Christo) and [Thomas Bangalter](https://en.m.wikipedia.org/wiki/Thomas_Bangalter). They achieved popularity in the late 1990s as part of the [French house](https://en.m.wikipedia.org/wiki/French_house) movement; they also had success in the years following, combining elements of [house music](https://en.m.wikipedia.org/wiki/House_music) with [funk](https://en.m.wikipedia.org/wiki/Funk), [techno](https://en.m.wikipedia.org/wiki/Techno), [disco](https://en.m.wikipedia.org/wiki/Disco), rock and [synthpop](https://en.m.wikipedia.org/wiki/Synthpop). They have worn ornate helmets and gloves to assume [robot](https://en.m.wikipedia.org/wiki/Robot) personas in most public appearances since 1999 and rarely grant interviews or appear on television. The duo were managed from 1996 to 2008 by [Pedro Winter](https://en.m.wikipedia.org/wiki/Pedro_Winter) (also known as Busy P), the head of [Ed Banger Records](https://en.m.wikipedia.org/wiki/Ed_Banger_Records).
